实现了根据不同的状态, 从 theme 对象中查找相应的 style

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
         <relativePath>./guilink/parent</relativePath>
     </parent>
 
-    <artifactId>guilink-all</artifactId>
+    <artifactId>guilink</artifactId>
     <packaging>pom</packaging>
 
     <modules>
